# toyprojectvcpkg

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
